ext/mvc/model/query/scanner.c
/* Generated by re2c 0.16 on Tue May  7 11:10:01 2019 */
/* #line 1 "scanner.re" */

/*
  +------------------------------------------------------------------------+
  | Dao Framework    						      |
  +------------------------------------------------------------------------+
  | Copyright (c) 2011-2016 Phalcon Team (http://www.phalconphp.com)       |
  +------------------------------------------------------------------------+
  | This source file is subject to the New BSD License that is bundled     |
  | with this package in the file docs/LICENSE.txt.			|
  |									|
  | If you did not receive a copy of the license and are unable to	 |
  | obtain it through the world-wide-web, please send an email	     |
  | to license@phalconphp.com so we can send you a copy immediately.       |
  +------------------------------------------------------------------------+
  | Authors: Andres Gutierrez <andres@phalconphp.com>		      |
  |	  Eduar Carvajal <eduar@phalconphp.com>			 |
  +------------------------------------------------------------------------+
*/

#ifdef HAVE_CONFIG_H
#include "config.h"
#endif

#include <php.h>
#include "php_dao.h"

#include "scanner.h"

#define YYCTYPE unsigned char
#define YYCURSOR (s->start)
#define YYLIMIT (s->end)
#define YYMARKER q

int phql_get_token(phql_scanner_state *s, phql_scanner_token *token) {

	char *q = YYCURSOR;
	int status = PHQL_SCANNER_RETCODE_IMPOSSIBLE;

	while (PHQL_SCANNER_RETCODE_IMPOSSIBLE == status) {

		
/* #line 45 "scanner.c" */
		{
			YYCTYPE yych;
			unsigned int yyaccept = 0;
			static const unsigned char yybm[] = {
				  0,  48,  48,  48,  48,  48,  48,  48, 
				 48,  49,  49,  48,  48,  49,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				 49,  48,  32,  48,  48,  48,  48,  16, 
				 48,  48,  48,  48,  48, 240,  48,  48, 
				254, 254, 254, 254, 254, 254, 254, 254, 
				254, 254, 180,  48,  48,  48,  48,  48, 
				 48, 252, 252, 252, 252, 252, 252, 244, 
				244, 244, 244, 244, 244, 244, 244, 244, 
				244, 244, 244, 244, 244, 244, 244, 244, 
				244, 244, 244,  48,   4,  48,  48, 244, 
				 48, 252, 252, 252, 252, 252, 252, 244, 
				244, 244, 244, 244, 244, 244, 244, 244, 
				244, 244, 244, 244, 244, 244, 244, 244, 
				252, 244, 244,  48,  48,  48,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
			};
			yych = *YYCURSOR;
			if (yybm[0+yych] & 1) {
				goto yy6;
			}
			switch (yych) {
			case 0x00:	goto yy2;
			case ' ':
			case '!':	goto yy9;
			case '"':	goto yy11;
			case '%':	goto yy12;
			case '&':	goto yy14;
			case '\'':	goto yy16;
			case '(':	goto yy17;
			case ')':	goto yy19;
			case '*':	goto yy21;
			case '+':	goto yy23;
			case ',':	goto yy25;
			case '-':	goto yy27;
			case '.':	goto yy29;
			case '/':	goto yy31;
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':	goto yy33;
			case ':':	goto yy36;
			case '<':	goto yy38;
			case '=':	goto yy40;
			case '>':	goto yy42;
			case '?':	goto yy44;
			case '@':	goto yy45;
			case 'A':
			case 'a':	goto yy46;
			case 'B':
			case 'b':	goto yy47;
			case 'C':
			case 'c':	goto yy48;
			case 'D':
			case 'd':	goto yy49;
			case 'E':
			case 'e':	goto yy50;
			case 'F':
			case 'f':	goto yy51;
			case 'G':
			case 'g':	goto yy52;
			case 'H':
			case 'h':	goto yy54;
			case 'I':
			case 'i':	goto yy55;
			case 'J':
			case 'j':	goto yy56;
			case 'K':
			case 'M':
			case 'P':
			case 'Q':
			case 'X':
			case 'Y':
			case 'Z':
			case '_':
			case 'k':
			case 'm':
			case 'p':
			case 'q':
			case 'y':
			case 'z':	goto yy57;
			case 'L':
			case 'l':	goto yy59;
			case 'N':
			case 'n':	goto yy60;
			case 'O':
			case 'o':	goto yy61;
			case 'R':
			case 'r':	goto yy62;
			case 'S':
			case 's':	goto yy63;
			case 'T':
			case 't':	goto yy64;
			case 'U':
			case 'u':	goto yy65;
			case 'V':
			case 'v':	goto yy66;
			case 'W':
			case 'w':	goto yy67;
			case '[':	goto yy68;
			case '\\':	goto yy69;
			case '^':	goto yy70;
			case 'x':	goto yy72;
			case '{':	goto yy74;
			case '|':	goto yy75;
			case '~':	goto yy77;
			default:	goto yy4;
			}
yy2:
			++YYCURSOR;
/* #line 577 "scanner.re" */
			{
			status = PHQL_SCANNER_RETCODE_EOF;
			break;
		}
/* #line 187 "scanner.c" */
yy4:
			++YYCURSOR;
yy5:
/* #line 582 "scanner.re" */
			{
			status = PHQL_SCANNER_RETCODE_ERR;
			break;
		}
/* #line 196 "scanner.c" */
yy6:
			++YYCURSOR;
			yych = *YYCURSOR;
			if (yybm[0+yych] & 1) {
				goto yy6;
			}
/* #line 572 "scanner.re" */
			{
			token->opcode = PHQL_T_IGNORE;
			return 0;
		}
/* #line 208 "scanner.c" */
yy9:
			++YYCURSOR;
			if ((yych = *YYCURSOR) == '!') goto yy79;
			if (yych == '=') goto yy81;
/* #line 547 "scanner.re" */
			{
			token->opcode = PHQL_T_NOT;
			return 0;
		}
/* #line 218 "scanner.c" */
yy11:
			yyaccept = 0;
			yych = *(YYMARKER = ++YYCURSOR);
			if (yych <= 0x00) goto yy5;
			goto yy84;
yy12:
			++YYCURSOR;
/* #line 447 "scanner.re" */
			{
			token->opcode = PHQL_T_MOD;
			return 0;
		}
/* #line 231 "scanner.c" */
yy14:
			++YYCURSOR;
			if ((yych = *YYCURSOR) == '&') goto yy89;
/* #line 562 "scanner.re" */
			{
			token->opcode = PHQL_T_BITWISE_AND;
			return 0;
		}
/* #line 240 "scanner.c" */
yy16:
			yyaccept = 0;
			yych = *(YYMARKER = ++YYCURSOR);
			if (yych <= 0x00) goto yy5;
			goto yy92;
yy17:
			++YYCURSOR;
/* #line 472 "scanner.re" */
			{
			token->opcode = PHQL_T_PARENTHESES_OPEN;
			return 0;
		}
/* #line 253 "scanner.c" */
yy19:
			++YYCURSOR;
/* #line 477 "scanner.re" */
			{
			token->opcode = PHQL_T_PARENTHESES_CLOSE;
			return 0;
		}
/* #line 261 "scanner.c" */
yy21:
			++YYCURSOR;
/* #line 437 "scanner.re" */
			{
			token->opcode = PHQL_T_MUL;
			return 0;
		}
/* #line 269 "scanner.c" */
yy23:
			++YYCURSOR;
/* #line 427 "scanner.re" */
			{
			token->opcode = PHQL_T_ADD;
			return 0;
		}
/* #line 277 "scanner.c" */
yy25:
			++YYCURSOR;
/* #line 467 "scanner.re" */
			{
			token->opcode = PHQL_T_COMMA;
			return 0;
		}
/* #line 285 "scanner.c" */
yy27:
			++YYCURSOR;
/* #line 432 "scanner.re" */
			{
			token->opcode = PHQL_T_SUB;
			return 0;
		}
/* #line 293 "scanner.c" */
yy29:
			++YYCURSOR;
			if ((yych = *YYCURSOR) <= '/') goto yy30;
			if (yych <= '9') goto yy94;
yy30:
/* #line 452 "scanner.re" */
			{
			token->opcode = PHQL_T_DOT;
			return 0;
		}
/* #line 304 "scanner.c" */
yy31:
			++YYCURSOR;
/* #line 442 "scanner.re" */
			{
			token->opcode = PHQL_T_DIV;
			return 0;
		}
/* #line 312 "scanner.c" */
yy33:
			++YYCURSOR;
			yych = *YYCURSOR;
			if (yybm[0+yych] & 2) {
				goto yy33;
			}
			if (yych <= 'F') {
				if (yych == '.') goto yy94;
				if (yych >= 'A') goto yy97;
			} else {
				if (yych <= 'f') {
					if (yych >= 'a') goto yy97;
				} else {
					if (yych == 'x') goto yy97;
				}
			}
yy35:
/* #line 46 "scanner.re" */
			{
			token->value = estrndup(q, YYCURSOR - q);
			token->len = YYCURSOR - q;
			if (token->len > 2 && !memcmp(token->value, "0x", 2)) {
				token->opcode = PHQL_T_HINTEGER;
			} else {
				int i, alpha = 0;
				for (i = 0; i < token->len; i++) {
				    unsigned char ch = token->value[i];
				    if (!((ch >= '0') && (ch <= '9'))) {
					alpha = 1;
					break;
				    }
				}
				if (alpha) {
				    token->opcode = PHQL_T_IDENTIFIER;
				} else {
				    token->opcode = PHQL_T_INTEGER;
				}
			}
			q = YYCURSOR;
			return 0;
		}
/* #line 354 "scanner.c" */
yy36:
			yyaccept = 1;
			yych = *(YYMARKER = ++YYCURSOR);
			if (yybm[0+yych] & 64) {
				goto yy99;
			}
			if (yych <= '/') goto yy37;
			if (yych <= ':') goto yy101;
yy37:
/* #line 462 "scanner.re" */
			{
			token->opcode = PHQL_T_COLON;
			return 0;
		}
/* #line 369 "scanner.c" */
yy38:
			++YYCURSOR;
			if ((yych = *YYCURSOR) <= '>') {
				if (yych <= '<') goto yy39;
				if (yych <= '=') goto yy103;
				goto yy105;
			} else {
				if (yych == '@') goto yy107;
			}
yy39:
/* #line 502 "scanner.re" */
			{
			token->opcode = PHQL_T_LESS;
			return 0;
		}
/* #line 385 "scanner.c" */
yy40:
			++YYCURSOR;
/* #line 512 "scanner.re" */
			{
			token->opcode = PHQL_T_EQUALS;
			return 0;
		}
/* #line 393 "scanner.c" */
yy42:
			++YYCURSOR;
			if ((yych = *YYCURSOR) == '=') goto yy109;
/* #line 507 "scanner.re" */
			{
			token->opcode = PHQL_T_GREATER;
			return 0;
		}
/* #line 402 "scanner.c" */
yy44:
			yych = *++YYCURSOR;
			if (yych <= '/') goto yy5;
			if (yych <= '9') goto yy111;
			goto yy5;
yy45:
			yych = *++YYCURSOR;
			if (yych == '>') goto yy114;
			if (yych == '@') goto yy116;
			goto yy5;
yy46:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'G':
			case 'g':	goto yy118;
			case 'L':
			case 'l':	goto yy119;
			case 'N':
			case 'n':	goto yy120;
			case 'S':
			case 's':	goto yy121;
			default:	goto yy73;
			}
yy47:
			yych = *++YYCURSOR;
			if (yych <= 'Y') {
				if (yych == 'E') goto yy123;
				if (yych <= 'X') goto yy73;
				goto yy124;
			} else {
				if (yych <= 'e') {
					if (yych <= 'd') goto yy73;
					goto yy123;
				} else {
					if (yych == 'y') goto yy124;
					goto yy73;
				}
			}
yy48:
			yych = *++YYCURSOR;
			if (yych <= 'R') {
				if (yych <= 'N') {
					if (yych == 'A') goto yy126;
					goto yy73;
				} else {
					if (yych <= 'O') goto yy127;
					if (yych <= 'Q') goto yy73;
					goto yy128;
				}
			} else {
				if (yych <= 'n') {
					if (yych == 'a') goto yy126;
					goto yy73;
				} else {
					if (yych <= 'o') goto yy127;
					if (yych == 'r') goto yy128;
					goto yy73;
				}
			}
yy49:
			yych = *++YYCURSOR;
			if (yych <= 'I') {
				if (yych == 'E') goto yy129;
				if (yych <= 'H') goto yy73;
				goto yy130;
			} else {
				if (yych <= 'e') {
					if (yych <= 'd') goto yy73;
					goto yy129;
				} else {
					if (yych == 'i') goto yy130;
					goto yy73;
				}
			}
yy50:
			yych = *++YYCURSOR;
			if (yych <= 'X') {
				if (yych <= 'M') {
					if (yych == 'L') goto yy131;
					goto yy73;
				} else {
					if (yych <= 'N') goto yy132;
					if (yych <= 'W') goto yy73;
					goto yy133;
				}
			} else {
				if (yych <= 'm') {
					if (yych == 'l') goto yy131;
					goto yy73;
				} else {
					if (yych <= 'n') goto yy132;
					if (yych == 'x') goto yy134;
					goto yy73;
				}
			}
yy51:
			yych = *++YYCURSOR;
			if (yych <= 'U') {
				if (yych <= 'O') {
					if (yych == 'A') goto yy135;
					if (yych <= 'N') goto yy73;
					goto yy136;
				} else {
					if (yych == 'R') goto yy137;
					if (yych <= 'T') goto yy73;
					goto yy138;
				}
			} else {
				if (yych <= 'o') {
					if (yych == 'a') goto yy135;
					if (yych <= 'n') goto yy73;
					goto yy136;
				} else {
					if (yych <= 'r') {
						if (yych <= 'q') goto yy73;
						goto yy137;
					} else {
						if (yych == 'u') goto yy138;
						goto yy73;
					}
				}
			}
yy52:
			++YYCURSOR;
			if ((yych = *YYCURSOR) == 'R') goto yy139;
			if (yych == 'r') goto yy139;
			goto yy58;
yy53:
/* #line 400 "scanner.re" */
			{
			token->opcode = PHQL_T_IDENTIFIER;
			if ((YYCURSOR - q) > 1) {
				if (q[0] == '\\') {
					token->value = estrndup(q + 1, YYCURSOR - q - 1);
					token->len = YYCURSOR - q - 1;
				} else {
					token->value = estrndup(q, YYCURSOR - q);
					token->len = YYCURSOR - q;
				}
			} else {
				token->value = estrndup(q, YYCURSOR - q);
				token->len = YYCURSOR - q;
			}
			q = YYCURSOR;
			return 0;
		}
/* #line 549 "scanner.c" */
yy54:
			yych = *++YYCURSOR;
			if (yych == 'A') goto yy140;
			if (yych == 'a') goto yy140;
			goto yy58;
yy55:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'G':
			case 'g':	goto yy141;
			case 'L':
			case 'l':	goto yy142;
			case 'N':
			case 'n':	goto yy143;
			case 'S':
			case 's':	goto yy145;
			default:	goto yy58;
			}
yy56:
			yych = *++YYCURSOR;
			if (yych == 'O') goto yy147;
			if (yych == 'o') goto yy147;
			goto yy58;
yy57:
			++YYCURSOR;
			yych = *YYCURSOR;
yy58:
			if (yybm[0+yych] & 4) {
				goto yy57;
			}
			goto yy53;
yy59:
			yych = *++YYCURSOR;
			if (yych <= 'I') {
				if (yych == 'E') goto yy148;
				if (yych <= 'H') goto yy58;
				goto yy149;
			} else {
				if (yych <= 'e') {
					if (yych <= 'd') goto yy58;
					goto yy148;
				} else {
					if (yych == 'i') goto yy149;
					goto yy58;
				}
			}
yy60:
			yych = *++YYCURSOR;
			if (yych <= 'U') {
				if (yych == 'O') goto yy150;
				if (yych <= 'T') goto yy58;
				goto yy151;
			} else {
				if (yych <= 'o') {
					if (yych <= 'n') goto yy58;
					goto yy150;
				} else {
					if (yych == 'u') goto yy151;
					goto yy58;
				}
			}
yy61:
			yych = *++YYCURSOR;
			if (yych <= 'U') {
				if (yych <= 'N') {
					if (yych == 'F') goto yy152;
					if (yych <= 'M') goto yy58;
					goto yy153;
				} else {
					if (yych == 'R') goto yy155;
					if (yych <= 'T') goto yy58;
					goto yy157;
				}
			} else {
				if (yych <= 'n') {
					if (yych == 'f') goto yy152;
					if (yych <= 'm') goto yy58;
					goto yy153;
				} else {
					if (yych <= 'r') {
						if (yych <= 'q') goto yy58;
						goto yy155;
					} else {
						if (yych == 'u') goto yy157;
						goto yy58;
					}
				}
			}
yy62:
			yych = *++YYCURSOR;
			if (yych == 'I') goto yy158;
			if (yych == 'i') goto yy158;
			goto yy58;
yy63:
			yych = *++YYCURSOR;
			if (yych == 'E') goto yy159;
			if (yych == 'e') goto yy159;
			goto yy58;
yy64:
			yych = *++YYCURSOR;
			if (yych <= 'R') {
				if (yych == 'H') goto yy160;
				if (yych <= 'Q') goto yy58;
				goto yy161;
			} else {
				if (yych <= 'h') {
					if (yych <= 'g') goto yy58;
					goto yy160;
				} else {
					if (yych == 'r') goto yy161;
					goto yy58;
				}
			}
yy65:
			yych = *++YYCURSOR;
			if (yych <= 'S') {
				if (yych == 'P') goto yy162;
				if (yych <= 'R') goto yy58;
				goto yy163;
			} else {
				if (yych <= 'p') {
					if (yych <= 'o') goto yy58;
					goto yy162;
				} else {
					if (yych == 's') goto yy163;
					goto yy58;
				}
			}
yy66:
			yych = *++YYCURSOR;
			if (yych == 'A') goto yy164;
			if (yych == 'a') goto yy164;
			goto yy58;
yy67:
			yych = *++YYCURSOR;
			if (yych <= 'I') {
				if (yych <= 'G') goto yy58;
				if (yych <= 'H') goto yy165;
				goto yy166;
			} else {
				if (yych <= 'g') goto yy58;
				if (yych <= 'h') goto yy165;
				if (yych <= 'i') goto yy166;
				goto yy58;
			}
yy68:
			yyaccept = 0;
			yych = *(YYMARKER = ++YYCURSOR);
			if (yych <= '\\') {
				if (yych <= '@') goto yy5;
				if (yych == '[') goto yy5;
				goto yy167;
			} else {
				if (yych <= '_') {
					if (yych <= '^') goto yy5;
					goto yy167;
				} else {
					if (yych <= '`') goto yy5;
					if (yych <= 'z') goto yy167;
					goto yy5;
				}
			}
yy69:
			yych = *++YYCURSOR;
			if (yych <= '^') {
				if (yych <= '@') goto yy5;
				if (yych <= 'Z') goto yy57;
				goto yy5;
			} else {
				if (yych == '`') goto yy5;
				if (yych <= 'z') goto yy57;
				goto yy5;
			}
yy70:
			++YYCURSOR;
/* #line 557 "scanner.re" */
			{
			token->opcode = PHQL_T_BITWISE_XOR;
			return 0;
		}
/* #line 730 "scanner.c" */
yy72:
			++YYCURSOR;
			yych = *YYCURSOR;
yy73:
			if (yybm[0+yych] & 8) {
				goto yy72;
			}
			if (yych <= '[') {
				if (yych <= ':') {
					if (yych <= '/') goto yy35;
					goto yy57;
				} else {
					if (yych <= '@') goto yy35;
					if (yych <= 'Z') goto yy57;
					goto yy35;
				}
			} else {
				if (yych <= '_') {
					if (yych <= '\\') goto yy57;
					if (yych <= '^') goto yy35;
					goto yy57;
				} else {
					if (yych <= '`') goto yy35;
					if (yych <= 'z') goto yy57;
					goto yy35;
				}
			}
yy74:
			yyaccept = 0;
			yych = *(YYMARKER = ++YYCURSOR);
			if (yybm[0+yych] & 128) {
				goto yy169;
			}
			goto yy5;
yy75:
			++YYCURSOR;
			if ((yych = *YYCURSOR) == '|') goto yy171;
/* #line 567 "scanner.re" */
			{
			token->opcode = PHQL_T_BITWISE_OR;
			return 0;
		}
/* #line 773 "scanner.c" */
yy77:
			++YYCURSOR;
/* #line 552 "scanner.re" */
			{
			token->opcode = PHQL_T_BITWISE_NOT;
			return 0;
		}
/* #line 781 "scanner.c" */
yy79:
			++YYCURSOR;
/* #line 532 "scanner.re" */
			{
			token->opcode = PHQL_T_TS_NEGATE;
			return 0;
		}
/* #line 789 "scanner.c" */
yy81:
			++YYCURSOR;
/* #line 482 "scanner.re" */
			{
			token->opcode = PHQL_T_NOTEQUALS;
			return 0;
		}
/* #line 797 "scanner.c" */
yy83:
			++YYCURSOR;
			yych = *YYCURSOR;
yy84:
			if (yybm[0+yych] & 16) {
				goto yy83;
			}
			if (yych <= 0x00) goto yy85;
			if (yych <= '"') goto yy86;
			goto yy88;
yy85:
			YYCURSOR = YYMARKER;
			if (yyaccept == 0) {
				goto yy5;
			} else {
				goto yy37;
			}
yy86:
			++YYCURSOR;
/* #line 391 "scanner.re" */
			{
			token->opcode = PHQL_T_STRING;
			token->value = estrndup(q, YYCURSOR - q - 1);
			token->len = YYCURSOR - q - 1;
			q = YYCURSOR;
			return 0;
		}
/* #line 825 "scanner.c" */
yy88:
			++YYCURSOR;
			yych = *YYCURSOR;
			if (yych == '\n') goto yy85;
			goto yy83;
yy89:
			++YYCURSOR;
/* #line 527 "scanner.re" */
			{
			token->opcode = PHQL_T_TS_AND;
			return 0;
		}
/* #line 838 "scanner.c" */
yy91:
			++YYCURSOR;
			yych = *YYCURSOR;
yy92:
			if (yybm[0+yych] & 32) {
				goto yy91;
			}
			if (yych <= 0x00) goto yy85;
			if (yych <= '\'') goto yy86;
			++YYCURSOR;
			yych = *YYCURSOR;
			if (yych == '\n') goto yy85;
			goto yy91;
yy94:
			++YYCURSOR;
			yych = *YYCURSOR;
			if (yych <= '/') goto yy96;
			if (yych <= '9') goto yy94;
yy96:
/* #line 80 "scanner.re" */
			{
			token->opcode = PHQL_T_DOUBLE;
			token->value = estrndup(q, YYCURSOR - q);
			token->len = YYCURSOR - q;
			q = YYCURSOR;
			return 0;
		}
/* #line 866 "scanner.c" */
yy97:
			++YYCURSOR;
			yych = *YYCURSOR;
			if (yych <= 'F') {
				if (yych <= '/') goto yy35;
				if (yych <= '9') goto yy97;
				if (yych <= '@') goto yy35;
				goto yy97;
			} else {
				if (yych <= 'f') {
					if (yych <= '`') goto yy35;
					goto yy97;
				} else {
					if (yych == 'x') goto yy97;
					goto yy35;
				}
			}
yy99:
			++YYCURSOR;
			yych = *YYCURSOR;
			if (yybm[0+yych] & 64) {
				goto yy99;
			}
			if (yych <= '/') goto yy85;
			if (yych <= ':') goto yy173;
			goto yy85;
yy101:
			++YYCURSOR;
/* #line 457 "scanner.re" */
			{
			token->opcode = PHQL_T_DOUBLECOLON;
			return 0;
		}
/* #line 900 "scanner.c" */
yy103:
			++YYCURSOR;
/* #line 492 "scanner.re" */
			{
			token->opcode = PHQL_T_LESSEQUAL;
			return 0;
		}
/* #line 908 "scanner.c" */
yy105:
			++YYCURSOR;
/* #line 487 "scanner.re" */
			{
			token->opcode = PHQL_T_NOTEQUALS;
			return 0;
		}
/* #line 916 "scanner.c" */
yy107:
			++YYCURSOR;
/* #line 542 "scanner.re" */
			{
			token->opcode = PHQL_T_TS_CONTAINS_IN;
			return 0;
		}
/* #line 924 "scanner.c" */
yy109:
			++YYCURSOR;
/* #line 497 "scanner.re" */
			{
			token->opcode = PHQL_T_GREATEREQUAL;
			return 0;
		}
/* #line 932 "scanner.c" */
yy111:
			++YYCURSOR;
			yych = *YYCURSOR;
			if (yych <= '/') goto yy113;
			if (yych <= '9') goto yy111;
yy113:
/* #line 89 "scanner.re" */
			{
			token->opcode = PHQL_T_NPLACEHOLDER;
			token->value = estrndup(q, YYCURSOR - q);
			token->len = YYCURSOR - q;
			q = YYCURSOR;
			return 0;
		}
/* #line 947 "scanner.c" */
yy114:
			++YYCURSOR;
/* #line 537 "scanner.re" */
			{
			token->opcode = PHQL_T_TS_CONTAINS_ANOTHER;
			return 0;
		}
/* #line 955 "scanner.c" */
yy116:
			++YYCURSOR;
/* #line 517 "scanner.re" */
			{
			token->opcode = PHQL_T_TS_MATCHES;
			return 0;
		}
/* #line 963 "scanner.c" */
yy118:
			yych = *++YYCURSOR;
			if (yych == 'A') goto yy175;
			if (yych == 'a') goto yy175;
			goto yy58;
yy119:
			yych = *++YYCURSOR;
			if (yych == 'L') goto yy176;
			if (yych == 'l') goto yy176;
			goto yy58;
yy120:
			yych = *++YYCURSOR;
			if (yych == 'D') goto yy178;
			if (yych == 'd') goto yy178;
			goto yy58;
yy121:
			++YYCURSOR;
			if ((yych = *YYCURSOR) <= '[') {
				if (yych <= '@') {
					if (yych <= '/') goto yy122;
					if (yych <= ':') goto yy57;
				} else {
					if (yych == 'C') goto yy180;
					if (yych <= 'Z') goto yy57;
				}
			} else {
				if (yych <= '`') {
					if (yych <= '\\') goto yy57;
					if (yych == '_') goto yy57;
				} else {
					if (yych == 'c') goto yy180;
					if (yych <= 'z') goto yy57;
				}
			}
yy122:
/* #line 135 "scanner.re" */
			{
			token->opcode = PHQL_T_AS;
			return 0;
		}
/* #line 1004 "scanner.c" */
yy123:
			yych = *++YYCURSOR;
			if (yych == 'T') goto yy182;
			if (yych == 't') goto yy182;
			goto yy73;
yy124:
			++YYCURSOR;
			if (yybm[0+(yych = *YYCURSOR)] & 4) {
				goto yy57;
			}
/* #line 170 "scanner.re" */
			{
			token->opcode = PHQL_T_BY;
			return 0;
		}
/* #line 1020 "scanner.c" */
yy126:
			yych = *++YYCURSOR;
			if (yych == 'S') goto yy183;
			if (yych == 's') goto yy183;
			goto yy73;
yy127:
			yych = *++YYCURSOR;
			if (yych == 'N') goto yy184;
			if (yych == 'n') goto yy184;
			goto yy58;
yy128:
			yych = *++YYCURSOR;
			if (yych == 'O') goto yy185;
			if (yych == 'o') goto yy185;
			goto yy58;
yy129:
			yych = *++YYCURSOR;
			if (yych <= 'S') {
				if (yych == 'L') goto yy186;
				if (yych <= 'R') goto yy73;
				goto yy187;
			} else {
				if (yych <= 'l') {
					if (yych <= 'k') goto yy73;
					goto yy186;
				} else {
					if (yych == 's') goto yy187;
					goto yy73;
				}
			}
yy130:
			yych = *++YYCURSOR;
			if (yych == 'S') goto yy188;
			if (yych == 's') goto yy188;
			goto yy58;
yy131:
			yych = *++YYCURSOR;
			if (yych == 'S') goto yy189;
			if (yych == 's') goto yy189;
			goto yy58;
yy132:
			yych = *++YYCURSOR;
			if (yych == 'D') goto yy190;
			if (yych == 'd') goto yy190;
			goto yy58;
yy133:
			yych = *++YYCURSOR;
			if (yych == 'I') goto yy192;
			if (yych == 'i') goto yy192;
			goto yy58;
yy134:
